--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -15,6 +15,11 @@ html {
   font-weight: 700;
   font-size: 40px;
   line-height: 5.2rem;
+
+  @media screen and (max-width: 760px) {
+    font-size: 30px;
+    line-height: 4rem;
+  }
 }
 
 .desc {
